--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
-  <body>
+  
+  <head>
   <title>科学の甲子園ジュニア対策サイト(個人)</title>
-  </body>
-  <style>
+  </head>
+  <body>
     <h1>科学の甲子園対策サイト(個人)</h1>
     <p>ようこそ、科学の甲子園ジュニア(個人)練習サイトへ</p>
     <style>
@@ -14,5 +16,6 @@
       margin:auto
         }
   </style>
+    </body>
   </html>
     
