--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   </head>
   <body>
     <h1>科学の甲子園対策サイト(個人)</h1>
-    <p>ようこそ、科学の甲子園ジュニア(個人)練習サイトへ</p>
+    <p><big>ようこそ、科学の甲子園ジュニア(個人)練習サイトへ</big></p>
     <style>
     h1{
-      margin:auto;
+      text-align:center
         color:red;
         }
     p{
-      margin:auto
+      text-align:center
         }
   </style>
     </body>
