--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <title>科学の甲子園ジュニア対策サイト(個人)</title>
   </head>
   <body>
+    <div class=hajime>
     <h1>科学の甲子園対策サイト(個人)</h1>
-    <p><big>ようこそ、科学の甲子園ジュニア(個人)練習サイトへ</big></p>
+    <p><big><br>ようこそ、科学の甲子園ジュニア(個人)練習サイトへ</big></p>
+      </div>
     <style>
+      <p>テスト</p>
     h1{
       text-align:center
         color:red;
