--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <p><big><br>ようこそ、科学の甲子園ジュニア(個人)練習サイトへ</big></p>
       </div>
     <style>
-      <p>テスト</p>
+      .hajime{
+        background:yellow;
+        }
     h1{
       text-align:center
         color:red;
