--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         background:yellow;
         }
     h1{
-      text-align:center
+      text-align :中央;
         color:red;
         }
     p{
