--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   
   <head>
+      <meta charset="UTF-8" />
   <title>科学の甲子園ジュニア対策サイト(個人)</title>
   </head>
   <body>
@@ -9,16 +10,24 @@
     <h1>科学の甲子園対策サイト(個人)</h1>
     <p><big><br>ようこそ、科学の甲子園ジュニア(個人)練習サイトへ</big></p>
       </div>
+    <script>
+   
+       let susui = 2;
+      if (susumi==2){
+        document.getElementById("hajime").style.display ="none";
+        }
+        
+    </script>
     <style>
       .hajime{
         background:yellow;
         }
     h1{
-      text-align :中央;
+      text-align :center;
         color:red;
         }
     p{
-      text-align:center
+      text-align:center;
         }
   </style>
     </body>
