--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <script src="https://deno.land/x/embed_pdf@v1.2.0/mod.js" type="module"></script>
 
 <!-- src属性にpdfのファイルパスを指定する -->
-<embed-pdf src="./path/to/file.pdf"></embed-pdf>
+<embed-pdf src="2022_hikki_1 (1)-1.pdf"></embed-pdf>
     </body>
   </html>
     
